crates/minipg-analysis/tests/snapshots/semantic_tests__duplicate_rule_detection.snap
---
source: crates/minipg-analysis/tests/semantic_tests.rs
expression: result.diagnostics
---
- severity: Error
  location: ~
  message: "duplicate rule definition: rule1"
  code: E002
