crates/minipg-analysis/tests/snapshots/semantic_tests__undefined_rule_detection.snap
---
source: crates/minipg-analysis/tests/semantic_tests.rs
expression: result.diagnostics
---
- severity: Error
  location: ~
  message: "undefined rule: undefined_rule"
  code: E001
